[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://Scripts/rebind_button_with_label.gd" id="1_2l5vn"]
[ext_resource type="Script" path="res://Scripts/key_rebind_button.gd" id="2_3wp2y"]
[ext_resource type="Texture2D" uid="uid://bcd5yrhdrqswp" path="res://addons/ActionIcon/Keyboard/Blank.png" id="3_mdi16"]
[ext_resource type="Script" path="res://addons/ActionIcon/ActionIcon.gd" id="4_4dp7s"]

[node name="RebindButton" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -20.0
offset_right = 94.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2l5vn")

[node name="Action" type="Label" parent="." groups=["ActionLabel"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Action"
vertical_alignment = 1

[node name="KeyRebindButton" type="Button" parent="." groups=["KeyRebindButton"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Key"
script = ExtResource("2_3wp2y")

[node name="ActionIcon" type="TextureRect" parent="KeyRebindButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mdi16")
expand_mode = 1
stretch_mode = 5
script = ExtResource("4_4dp7s")

[connection signal="pressed" from="KeyRebindButton" to="KeyRebindButton" method="_on_pressed"]
[connection signal="no_icon_found" from="KeyRebindButton/ActionIcon" to="KeyRebindButton" method="_on_action_icon_no_icon_found"]
